# pomodoro-timer-desktop

./: CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  setup.sh
.github/workflows/: test.yml
app/: config.py  notifier.py  session_review.py  settings.py  stats.py  timer.py  tray.py  window.py
tests/: conftest.py  test_alarm.py  test_dashboard.py  test_long_break.py  test_projects.py  test_session_review.py  test_startup.py  test_stats_persistence.py
